force-app/main/default/objects/CONMAN_Contract__c/CONMAN_Contract__c.object-meta.xml
<CustomObject>
    <description>Used for Contract Management going forward as part of the ConMan project</description>
    <label>PGi Contract</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PGi Contract #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PGi Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>