force-app/main/default/objects/CONMAN_Contract__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to set the relationship between Conman Contract and Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CONMAN_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>