force-app/main/default/objects/CONMAN_Contract__c/fields/Account_s_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_s_Agreement_Name__c</fullName>
    <inlineHelpText>This value is populated by Sales Operations or Legal when the Account has been previously contracted under a different name.</inlineHelpText>
    <label>Account’s Agreement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>