force-app/main/default/objects/CONMAN_Contract__c/fields/Active_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Active_Licenses__c</fullName>
    <description>How many actually uses</description>
    <inlineHelpText>How many actually uses</inlineHelpText>
    <label>Active Licenses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>