force-app/main/default/objects/CONMAN_Contract__c/fields/Active_Users_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Active_Users_Last_3_Months__c</fullName>
    <label>Active Users Last 3 Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>