force-app/main/default/objects/CONMAN_Contract__c/fields/Add_New_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Add_New_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this Amendment add new pricing, products, rates, etc. to a previous Contract?</description>
    <inlineHelpText>Should this Amendment add new pricing, products, rates, etc. to a previous Contract?</inlineHelpText>
    <label>Add New Pricing</label>
    <type>Checkbox</type>
</CustomField>