force-app/main/default/objects/CONMAN_Contract__c/fields/Agreement_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PGi_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>