force-app/main/default/objects/CONMAN_Contract__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date that the Contract Status changed to Approved. This date is reset if the approval is Recalled/Rejected.</description>
    <inlineHelpText>Date that the Contract Status changed to Approved. This date is reset if the approval is Recalled/Rejected.</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>