force-app/main/default/objects/CONMAN_Contract__c/fields/Audio_Commit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Audio_Commit_Frequency__c</fullName>
    <label>Audio Commit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>