force-app/main/default/objects/CONMAN_Contract__c/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Renewal</label>
    <type>Checkbox</type>
</CustomField>