force-app/main/default/objects/CONMAN_Contract__c/fields/Auto_Renewal_Interval_months__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Interval_months__c</fullName>
    <label>Auto-Renewal Interval (months)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>