force-app/main/default/objects/CONMAN_Contract__c/fields/Billing_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Ticket_Number__c</fullName>
    <label>Billing Ticket Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>