force-app/main/default/objects/CONMAN_Contract__c/fields/BP_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>BP_Contract_ID__c</fullName>
    <description>Chosen ID for a Billing Platform Contract</description>
    <inlineHelpText>Chosen ID for a Billing Platform Contract</inlineHelpText>
    <label>BP Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>