force-app/main/default/objects/CONMAN_Contract__c/fields/BP_Contract_Lookup_Status__c.field-meta.xml
<CustomField>
    <fullName>BP_Contract_Lookup_Status__c</fullName>
    <description>When iContract tries to contact Billing Platform for the relevant Contracts, this stores the status of the call.</description>
    <inlineHelpText>When iContract tries to contact Billing Platform for the relevant Contracts, this stores the status of the call.</inlineHelpText>
    <label>BP Contract Lookup Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Tried</fullName>
                <default>true</default>
                <label>Not Tried</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Invalid Parameters</fullName>
            </value>
            <value>
                <fullName>Account without Company</fullName>
            </value>
            <value>
                <fullName>Account&apos;s Companies without Enterprise</fullName>
            </value>
            <value>
                <fullName>Account&apos;s Companies have multiple Enterprises</fullName>
            </value>
            <value>
                <fullName>Enterprise shared across Account hierarchies</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Endpoint Exception</fullName>
            </value>
            <value>
                <fullName>Parsing Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>