force-app/main/default/objects/CONMAN_Contract__c/fields/BP_Contract_Selection__c.field-meta.xml
<CustomField>
    <fullName>BP_Contract_Selection__c</fullName>
    <description>After the Endpoint returns BP Contracts, this stores the result of choosing the BP Contract to use.</description>
    <inlineHelpText>After the Endpoint returns BP Contracts, this stores the result of choosing the BP Contract to use.</inlineHelpText>
    <label>BP Contract Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Tried</fullName>
                <default>true</default>
                <label>Not Tried</label>
            </value>
            <value>
                <fullName>Automatic: Single Option</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Failed: No Options</fullName>
            </value>
            <value>
                <fullName>Failed: Multiple Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>