force-app/main/default/objects/CONMAN_Contract__c/fields/Cancellation_Notice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notice_Notes__c</fullName>
    <label>Cancellation Notice Notes</label>
    <type>TextArea</type>
</CustomField>