force-app/main/default/objects/CONMAN_Contract__c/fields/CEA_Date_Active__c.field-meta.xml
<CustomField>
    <fullName>CEA_Date_Active__c</fullName>
    <description>The date that shows the most recent Contract End/Anniversary Date. This shows the Original CEA Date before renewal and once renewed the current CEA Date.</description>
    <inlineHelpText>This shows the Original CEA Date before renewal and once renewed the current CEA Date. This will be set upon initial entry of the CEA Date - Original value. *For manual renewals, please set this to the new CEA Date for man. renewal.</inlineHelpText>
    <label>CEA Date - Active</label>
    <type>Date</type>
</CustomField>