force-app/main/default/objects/CONMAN_Contract__c/fields/CEA_Date_Original__c.field-meta.xml
<CustomField>
    <fullName>CEA_Date_Original__c</fullName>
    <inlineHelpText>This is the Original Contract/End Anniversary Date for this Contract. This should never change once it has been entered to the system.</inlineHelpText>
    <label>CEA Date - Original</label>
    <type>Date</type>
</CustomField>