force-app/main/default/objects/CONMAN_Contract__c/fields/CEA_Date_Prior_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>CEA_Date_Prior_to_Renewal__c</fullName>
    <description>The Contract End/Anniversary Date before the last renewal occurred.</description>
    <inlineHelpText>The Contract End/Anniversary Date before the last renewal occurred. This will be set automatically when auto-renewed. *For manual renewals please set this value to the old CEA Date - Original value.</inlineHelpText>
    <label>CEA Date - Prior to Renewal</label>
    <type>Date</type>
</CustomField>