force-app/main/default/objects/CONMAN_Contract__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <description>How was this PGi Contract marked Customer Accepted?</description>
    <inlineHelpText>How was this PGi Contract marked Customer Accepted?</inlineHelpText>
    <label>Closed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>eSignature</fullName>
            </value>
            <value>
                <fullName>iContract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>