force-app/main/default/objects/CONMAN_Contract__c/fields/Company_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Name__c</fullName>
    <label>Company&#39;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>