force-app/main/default/objects/CONMAN_Contract__c/fields/Contract_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Document_Status__c</fullName>
    <description>This is the replacement of the Q/C record&apos;s Contract Document Status field</description>
    <label>Contract Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Signed</fullName>
            </value>
            <value>
                <fullName>Deactivated Company/No Termination Notice</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>