force-app/main/default/objects/CONMAN_Contract__c/fields/Contract_Region__c.field-meta.xml
<CustomField>
    <fullName>Contract_Region__c</fullName>
    <description>Cut over Record type from APAC and EMEA Contracts</description>
    <label>Contract Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>