force-app/main/default/objects/CONMAN_Contract__c/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <inlineHelpText>Automatically sets Contract Status to Expired once the Contract Renewal Date is in the past.</inlineHelpText>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>