force-app/main/default/objects/CONMAN_Contract__c/fields/Contract_Source__c.field-meta.xml
<CustomField>
    <fullName>Contract_Source__c</fullName>
    <label>Contract Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>Contract Document Generator</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>iContract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>