force-app/main/default/objects/CONMAN_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent To Customer</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contract Pricing Approved</fullName>
            </value>
            <value>
                <fullName>Contract Pricing Rejected</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting Manager Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting RVP Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting SVP Approval</fullName>
            </value>
            <value>
                <fullName>Pending Pricing Approval</fullName>
            </value>
            <value>
                <fullName>Downloaded</fullName>
            </value>
            <value>
                <fullName>Pending Legal Approval</fullName>
            </value>
            <value>
                <fullName>Legal Approved</fullName>
            </value>
            <value>
                <fullName>Legal Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>agTempValue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>