force-app/main/default/objects/CONMAN_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Subscription License Order</fullName>
                <default>true</default>
                <label>Subscription License Order</label>
            </value>
            <value>
                <fullName>Subscription License Agreement</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Rate Modification Amendment</fullName>
            </value>
            <value>
                <fullName>Agent Agreement</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Customer Service Order</fullName>
            </value>
            <value>
                <fullName>Email Order</fullName>
            </value>
            <value>
                <fullName>Gateway Customer Service Order</fullName>
            </value>
            <value>
                <fullName>Gateway Subscription License Order</fullName>
            </value>
            <value>
                <fullName>Master Services Agreement</fullName>
            </value>
            <value>
                <fullName>Related Document</fullName>
            </value>
            <value>
                <fullName>WebEx Agreement</fullName>
            </value>
            <value>
                <fullName>WebEx Amend</fullName>
            </value>
            <value>
                <fullName>Wholesale Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Services Agreement</fullName>
            </value>
            <value>
                <fullName>Local Affiliate Service Agreement</fullName>
            </value>
            <value>
                <fullName>Service Order</fullName>
            </value>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>TPx Service Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>