force-app/main/default/objects/CONMAN_Contract__c/fields/Contracted_Commit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Commit_Frequency__c</fullName>
    <label>Contracted Commit Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>