force-app/main/default/objects/CONMAN_Contract__c/fields/Contracted_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Frequency__c</fullName>
    <description>How often the agreement is paid.</description>
    <inlineHelpText>How often the agreement is paid.</inlineHelpText>
    <label>Contracted Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>