force-app/main/default/objects/CONMAN_Contract__c/fields/Contracted_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Licenses__c</fullName>
    <description>Originally agrees as per contract</description>
    <inlineHelpText>Originally agrees as per contract</inlineHelpText>
    <label>Contracted Licenses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>