force-app/main/default/objects/CONMAN_Contract__c/fields/Contracted_Term__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Term__c</fullName>
    <description>Length of the Contract/Amendment in months.</description>
    <inlineHelpText>Length of the Contract/Amendment in months.</inlineHelpText>
    <label>Contracted Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>