force-app/main/default/objects/CONMAN_Contract__c/fields/Created_By_s_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_s_Profile_ID__c</fullName>
    <formula>CreatedBy.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By&#39;s Profile ID</label>
    <type>Text</type>
</CustomField>