force-app/main/default/objects/CONMAN_Contract__c/fields/Customer_Pays_Selection__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pays_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if sales rep checks customer pays on legal request form.</description>
    <label>Customer Pays</label>
    <type>Checkbox</type>
</CustomField>