force-app/main/default/objects/CONMAN_Contract__c/fields/Customer_s_Business_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Business_Registration_Number__c</fullName>
    <label>Customer&apos;s Business Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>