force-app/main/default/objects/CONMAN_Contract__c/fields/Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Date__c</fullName>
    <inlineHelpText>Automatically populated by the last signature date if a customer&#39;s accepted via Adobe agreement.</inlineHelpText>
    <label>Customer Signed Date</label>
    <type>Date</type>
</CustomField>