force-app/main/default/objects/CONMAN_Contract__c/fields/customHeader__c.field-meta.xml
<CustomField>
    <fullName>customHeader__c</fullName>
    <description>The Header that appears above the Service and pricing schedule</description>
    <inlineHelpText>The Header that appears above the Service and pricing schedule</inlineHelpText>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>