force-app/main/default/objects/CONMAN_Contract__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>Placeholder for CONMAN CM-104</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>