force-app/main/default/objects/CONMAN_Contract__c/fields/Deactivated_Agreement_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Agreement_Sales_Rep_Name__c</fullName>
    <label>Deactivated Agreement Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>