force-app/main/default/objects/CONMAN_Contract__c/fields/Deal_Desk_Approved__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set by the Approval Process in order to trigger limit modifications.</description>
    <inlineHelpText>This is set by the Approval Process in order to trigger limit modifications.</inlineHelpText>
    <label>Deal Desk Approved</label>
    <type>Checkbox</type>
</CustomField>