force-app/main/default/objects/CONMAN_Contract__c/fields/Docusign_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Contract_Type__c</fullName>
    <label>Docusign Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>