force-app/main/default/objects/CONMAN_Contract__c/fields/Docusign_Customer_Signer__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Customer_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For docusign process. Background field that is set via the eSignature button on Opportunity.</description>
    <label>Docusign Customer Signer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account_Name__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PGi Contracts</relationshipLabel>
    <relationshipName>PGi_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>