force-app/main/default/objects/CONMAN_Contract__c/fields/eSignAgreementsSigned__c.field-meta.xml
<CustomField>
    <fullName>eSignAgreementsSigned__c</fullName>
    <formula>Related_Agreement__r.echosign_dev1__SignedPDF__c</formula>
    <label>eSign Agreements Signed</label>
    <type>Text</type>
</CustomField>