force-app/main/default/objects/CONMAN_Contract__c/fields/Final_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Sign_Date__c</fullName>
    <label>Final Sign Date</label>
    <type>Date</type>
</CustomField>