force-app/main/default/objects/CONMAN_Contract__c/fields/FinReq__c.field-meta.xml
<CustomField>
    <fullName>FinReq__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Financial Request</inlineHelpText>
    <label>FinReq</label>
    <referenceTo>Financial_Request__c</referenceTo>
    <relationshipLabel>PGi Contracts</relationshipLabel>
    <relationshipName>PGi_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>