force-app/main/default/objects/CONMAN_Contract__c/fields/FinReq_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>FinReq_Update_Status__c</fullName>
    <description>Used on approval process to mark approval from deal desk and allow PB to create FinReq and deal desk.  Not on page layout... process builders and approvals only</description>
    <label>FinReq Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>