force-app/main/default/objects/CONMAN_Contract__c/fields/Has_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this PGi Contract have any attachments?</description>
    <inlineHelpText>Does this PGi Contract have any attachments?</inlineHelpText>
    <label>Has Attachment(s)</label>
    <type>Checkbox</type>
</CustomField>