force-app/main/default/objects/CONMAN_Contract__c/fields/How_many_Locations__c.field-meta.xml
<CustomField>
    <fullName>How_many_Locations__c</fullName>
    <label>How many Locations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>