force-app/main/default/objects/CONMAN_Contract__c/fields/Intl_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Intl_Order_Type__c</fullName>
    <label>Intl Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Form</fullName>
            </value>
            <value>
                <fullName>Long Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>