force-app/main/default/objects/CONMAN_Contract__c/fields/Invoice_Layout__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Layout__c</fullName>
    <label>Invoice Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moderator Sort</fullName>
            </value>
            <value>
                <fullName>PO Sort</fullName>
            </value>
            <value>
                <fullName>Conf. Title Sort</fullName>
            </value>
            <value>
                <fullName>Participant Level Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>