force-app/main/default/objects/CONMAN_Contract__c/fields/Is_Related_to_SLO_MSA__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_to_SLO_MSA__c</fullName>
    <formula>TEXT(Associated_SLO_Name__c) &lt;&gt; &#39;&#39; &amp;&amp; NOT(ISBLANK(Associated_SLO_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Related to SLO MSA</label>
    <type>Checkbox</type>
</CustomField>