force-app/main/default/objects/CONMAN_Contract__c/fields/Is_this_Multi_Location__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Multi_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used if equipment is for more than one location</description>
    <label>Is this Multi-Location</label>
    <type>Checkbox</type>
</CustomField>