force-app/main/default/objects/CONMAN_Contract__c/fields/Legal_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Account_Name__c</fullName>
    <inlineHelpText>Account Name used on prior contracts that sales need amendments made to</inlineHelpText>
    <label>Legal: Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>