force-app/main/default/objects/CONMAN_Contract__c/fields/Licensed_Audio_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Audio_Minutes__c</fullName>
    <label>Licensed Audio Minutes</label>
    <length>15</length>
    <type>Text</type>
</CustomField>