force-app/main/default/objects/CONMAN_Contract__c/fields/Monthly_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_License_Fee__c</fullName>
    <label>Monthly License Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>