force-app/main/default/objects/CONMAN_Contract__c/fields/New_Minimum_Commitment__c.field-meta.xml
<CustomField>
    <fullName>New_Minimum_Commitment__c</fullName>
    <description>The new Minimum Commitment information for this Amendment.</description>
    <inlineHelpText>The new Minimum Commitment information for this Amendment.</inlineHelpText>
    <label>New Minimum Commitment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>