force-app/main/default/objects/CONMAN_Contract__c/fields/Owners_RVP__c.field-meta.xml
<CustomField>
    <fullName>Owners_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner&apos;s RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RVP_on_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>