force-app/main/default/objects/CONMAN_Contract__c/fields/Owners_SVP__c.field-meta.xml
<CustomField>
    <fullName>Owners_SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner&apos;s SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SVP_on_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>