force-app/main/default/objects/CONMAN_Contract__c/fields/OwnersFullName__c.field-meta.xml
<CustomField>
    <fullName>OwnersFullName__c</fullName>
    <formula>Owner:User.FirstName + &#39; &#39; + Owner:User.LastName</formula>
    <label>Owner&#39;s Full Name</label>
    <type>Text</type>
</CustomField>