force-app/main/default/objects/CONMAN_Contract__c/fields/Parent_PGi_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_PGi_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent PGi Contract</label>
    <referenceTo>CONMAN_Contract__c</referenceTo>
    <relationshipLabel>PGi Contracts</relationshipLabel>
    <relationshipName>PGi_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>