force-app/main/default/objects/CONMAN_Contract__c/fields/PGi_Entity__c.field-meta.xml
<CustomField>
    <fullName>PGi_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Entity</label>
    <referenceTo>PGi_Entity__c</referenceTo>
    <relationshipLabel>PGi Contracts</relationshipLabel>
    <relationshipName>PGi_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>