force-app/main/default/objects/CONMAN_Contract__c/fields/PGiCompany__c.field-meta.xml
<CustomField>
    <fullName>PGiCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Company</label>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipLabel>PGi Contracts</relationshipLabel>
    <relationshipName>PGi_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>